# News_Sentiments

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Ctemplogfile.txt  FinancialNewsAgent_v3.jsx  Makefile  README.md  detail_docs.md  docker-compose.yml  news_pipeline_v3.py  notes.md  package.json  pnpm-lock.yaml
backend/: .env.example  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0007_calibration_lineage.py  0008_deliberation_runs.py  0009_calibration_lineage.py  0010_dashboard_tables.py  0011_assessment_council_columns.py  0012_explainability_column.py  0013_market_data_tables.py  0014_opportunity_history.py  0015_live_opportunities_extended.py  0016_market_candles_1m.py
backend/app/: __init__.py  main.py
backend/app/core/: config.py  constants.py  dependencies.py  logging.py  security.py
backend/app/db/: __init__.py  session.py
backend/app/middleware/: exception_handlers.py  observability.py
backend/app/schemas/: common.py
backend/app/workers/: celery_app.py
backend/docs/: DIL_RESILIENCE_MIGRATION.md  REVERSE_BWB_WORKSTATION_DEPLOY.md
backend/requirements/: base.txt
backend/scripts/: analyze_log.py  bootstrap_schema.py  dil_phase_breakdown.py  repro_research.py
backend/tests/: conftest.py
backend/tests/analogs/: test_patterns.py  test_setup_simulator.py
backend/tests/api/: test_health.py
backend/tests/assessment/: test_consensus.py  test_round1_independent.py  test_round1_intel_expansion.py  test_team_service.py
backend/tests/core/: test_logging.py
backend/tests/dashboard/: conftest.py  test_council_refresh.py  test_explainability_in_report.py  test_opportunity_generator.py  test_repository_helpers.py  test_reverse_bwb_summarizer.py  test_routes_helpers.py  (+1 more)
docs/: README.md  (+1 more)
(+429 files in other folders)
