[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "finresearch-api"
version = "4.0.0"
description = "Financial News Research Platform — enterprise API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.6.0",
  "sqlalchemy[asyncio]>=2.0.36",
  "asyncpg>=0.30.0",
  "alembic>=1.14.0",
  "redis>=5.2.0",
  "celery[redis]>=5.4.0",
  "httpx>=0.28.0",
  "aiohttp>=3.11.0",
  "json-repair>=0.30.0",
  "tenacity>=9.0.0",
  "structlog>=24.4.0",
  "python-json-logger>=2.0.7",
  "slowapi>=0.1.9",
  "prometheus-client>=0.21.0",
  "opentelemetry-api>=1.28.0",
  "opentelemetry-sdk>=1.28.0",
  "opentelemetry-instrumentation-fastapi>=0.49b0",
  "python-jose[cryptography]>=3.3.0",
  "passlib[bcrypt]>=1.7.4",
  "qdrant-client>=1.12.0,<1.14.0",
  "sentence-transformers>=3.3.0",
  "transformers>=4.46.0",
  "torch>=2.5.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=6.0.0",
  "factory-boy>=3.3.0",
  "faker>=33.0.0",
  "ruff>=0.8.0",
  "black>=24.10.0",
  "mypy>=1.13.0",
  "types-redis",
  "pre-commit>=4.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q --tb=short"
